[package]
name = "pa-generate"
authors = ["Ragnar Groot Koerkamp"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/pairwise-alignment/pa-generate"
license = "MIT"
keywords = ["pairwise-alignment", "dataset", "bioinformatics", "library", "cli"]
readme = "README.md"
categories = ["science"]
default-run = "pa-generate"

[dependencies]
clap = {version = "4.0", features = ["derive"]}
itertools = "*"
serde = "*"
rand = "*"
rand_chacha = "*"
ropey = "*"
pa-types = { git = "https://github.com/pairwise-alignment/pa-types" }
