[package]
name = "pa-generate"
authors = ["Ragnar Groot Koerkamp"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/pairwise-alignment/pa-generate"
license = "MIT"
keywords = ["pairwise-alignment", "dataset", "bioinformatics", "library", "cli"]
readme = "README.md"
categories = ["science"]
default-run = "pa-generate"

[dependencies]
clap = {version = "4.0", features = ["derive"]}
rand_chacha = "0.9"
pa-types = { git = "https://github.com/pairwise-alignment/pa-types" }
rand = "0.9.0"
serde = "1.0.218"
itertools = "0.14.0"
ropey = "1.6.1"
